eapli.base/base.core/src/main/java/eapli/base/ANTLR/FileReader.g4
grammar FileReader;

program : state EOF;

state : file typeOfFile  #read
      ;

file : (LOWERCHAR | UPPERCHAR | DIGIT)+;



typeOfFile : '.txt' ;

DIGIT : [0-9]+;
DOT : '.';
LOWERCHAR : [a-z] ;
UPPERCHAR : [A-Z] ;
WS : [ \t\r\n]+ -> skip ;
